Setup Argument Handling

--- a/PA3/makefile
+++ b/PA3/makefile
@@ -12,10 +12,10 @@ FIFOreqchannel.o: FIFOreqchannel.h FIFOreqchannel.cpp
 	g++ -g -w -std=c++11 -c FIFOreqchannel.cpp
 
 client: client.cpp Histogram.o FIFOreqchannel.o common.o
-	g++ -g -w -std=c++11 -o client client.cpp Histogram.o FIFOreqchannel.o common.o -lpthread -lrt
+	g++ -g -w -std=c++11 -o client client.cpp Histogram.o FIFOreqchannel.o common.o -lpthread -lm
 
 dataserver: dataserver.cpp  FIFOreqchannel.o common.o
-	g++ -g -w -std=c++11 -o dataserver dataserver.cpp FIFOreqchannel.o common.o -lpthread -lrt
+	g++ -g -w -std=c++11 -o dataserver dataserver.cpp FIFOreqchannel.o common.o -lpthread -lm
 
 clean:
 	rm -rf *.o fifo* dataserver client 
