--- a/PA4/makefile
+++ b/PA4/makefile
@@ -3,7 +3,7 @@
 all: shell
 
 shell: shell.cpp
-	g++ -g -w -std=c++11 -o shell shell.cpp -lpthread -lrt
+	g++ -g -w -std=c++11 -o shell shell.cpp -lpthread -lrt -lncurses
 
 clean:
 	rm shell *.o
